[gd_scene load_steps=4 format=3 uid="uid://cww0g8165fubq"]

[ext_resource type="Script" uid="uid://c0t2fkbp051yy" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Shader" path="res://scenes/gui/pause_menu.gdshader" id="1_n87rw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_myx47"]
shader = ExtResource("1_n87rw")
shader_parameter/lod = 1.5

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_myx47")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.117647)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -243.0
offset_right = 191.5
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -180.0
offset_right = 124.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_quit_pressed"]
